--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <body>
          <hr>
         <p align="right">        
-            <a href="/home.html">Home</a>
-            <a href="/gallery.html">Gallery</a>
-            <a href="/blog.html">Blog</a>
-            <a href="/about.html">About</a>
-            <a href="/contact.html">Contact</a>
+            <a href="home.html">Home</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="blog.html">Blog</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
         </p>
             <hr>
 
@@ -32,15 +32,15 @@
         
         <ol>
                 <hr >
-            <h3><li><u><i>Murree</i></u></h3></li> <img src="/images/muree.jpg" alt="Murree" width="300" height="200">
+            <h3><li><u><i>Murree</i></u></h3></li> <img src="images/muree.jpg" alt="Murree" width="300" height="200">
                 <hr>
-            <h3><li><u><i>Skardu</i></u></h3></li> <img src="/images/skardu.jpeg" alt="Skardu" width="300" height="200">
+            <h3><li><u><i>Skardu</i></u></h3></li> <img src="images/skardu.jpeg" alt="Skardu" width="300" height="200">
                 <hr>
-            <h3><li><u><i>Lahore</i></u></h3></li> <img src="/images/lahore.webp" alt="Lahore" width="300" height="200">
+            <h3><li><u><i>Lahore</i></u></h3></li> <img src="images/lahore.webp" alt="Lahore" width="300" height="200">
                 <hr>
-            <h3><li><u><i>Karachi</i></u></h3></li> <img src="/images/karachi.jpg" alt="Karachi" width="300" height="200">
+            <h3><li><u><i>Karachi</i></u></h3></li> <img src="images/karachi.jpg" alt="Karachi" width="300" height="200">
                 <hr>
-            <h3><li><u><i>Islamabad</i></u></h3></li> <img src="/images/islamabad.jpeg" alt="Islamabad" width="300" height="200">
+            <h3><li><u><i>Islamabad</i></u></h3></li> <img src="images/islamabad.jpeg" alt="Islamabad" width="300" height="200">
                 <hr>
         </ol>
         
@@ -56,3 +56,4 @@
 
     </body>
 </html>
+
