--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,11 @@
             <hr>
 
         <p align="right">        
-            <a href="/home.html">Home</a>
-            <a href="/gallery.html">Gallery</a>
-            <a href="/blog.html">Blog</a>
-            <a href="/about.html">About</a>
-            <a href="/contact.html">Contact</a>
+            <a href="home.html">Home</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="blog.html">Blog</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
         </p>
 
             <hr>
@@ -49,4 +49,5 @@
             <li><a href="https://www.tiktok.com/@carzdealer.pk?_t=ZS-8yo7FUa7omY&_r=1" target="_blank">Tiktok</a></li>
             <li><a href="https://wa.me/message/7I4XX3PDEXUNF1" target="_blank">WhatsApp</a></li> 
     </body>
+
 </html>
