--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
          <hr>
         <p align="right">        
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="gallery.html">Gallery</a>
             <a href="blog.html">Blog</a>
             <a href="about.html">About</a>
@@ -56,4 +56,5 @@
 
     </body>
 </html>
+
 
