--- a/gallery.html
+++ b/gallery.html
@@ -8,11 +8,11 @@
     <body>
             <hr>
         <p align="right">        
-                <a href="home.html">Home</a>
-                <a href="gallery.html">Gallery</a>
-                <a href="blog.html">Blog</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="blog.html">Blog</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
         </p>
 
             <hr>
@@ -52,3 +52,4 @@
     </body>
 
 </html>
+
