--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
             <hr>
 
         <p align="right">        
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="gallery.html">Gallery</a>
             <a href="blog.html">Blog</a>
             <a href="about.html">About</a>
@@ -51,3 +51,4 @@
     </body>
 
 </html>
+
