--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
            <hr>
 
         <p align="right">        
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="gallery.html">Gallery</a>
             <a href="blog.html">Blog</a>
             <a href="about.html">About</a>
@@ -122,5 +122,6 @@
 
     </body>
 </html>
+
 
 
